infra/k8s/product-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: chathuka/product-service
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-srv
spec:
  selector:
    app: product-service
  ports:
    - name: product-service
      protocol: TCP
      port: 4001
      targetPort: 4001
