infra/k8s/seller-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seller
  template:
    metadata:
      labels:
        app: seller
    spec:
      containers:
        - name: seller
          image: chathuka/seller
---
apiVersion: v1
kind: Service
metadata:
  name: seller-srv
spec:
  selector:
    app: seller
  ports:
    - name: seller
      protocol: TCP
      port: 3001
      targetPort: 3001
