infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: buyonline.com
      http:
        paths:
          - path: /products/?(.*)/
            pathType: Prefix
            backend:
              service:
                name: product-service-srv
                port:
                  number: 4001
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: seller-srv
                port:
                  number: 4003
          - path: /?(.*)/
            pathType: Prefix
            backend:
              service:
                name: seller-srv
                port:
                  number: 3000
    - host: selleronline.com
      http:
        paths:
          - path: /?(.*)/
            pathType: Prefix
            backend:
              service:
                name: seller-srv
                port:
                  number: 3001
